@startuml

left to right direction

component ViewComponent{
    class ViewActor << object >>
    interface ViewActorCommand << trait >>
}

component ControllerComponent{
    class ControllerActor << object >>
    interface ControllerActorCommand << trait >>
}

component ModelComponent{
    class SimulationManagerActor << object >>
    class EventRecorderActor << object >>
    class CelestialBodyActor << object >>
    interface SimulationManagerActorCommand << trait >>
    interface EventRecorderActorCommand << trait >>
    interface CelestialBodyActorCommand << trait >>

    class AskSimulationState extends SimulationManagerActorCommand
    class SimulationStateResponse

    class AskRecordedEvents extends EventRecorderActorCommand
    class RecordedEventsResponse
}

ControllerActor ..> SimulationStateResponse
ControllerActor ..> RecordedEventsResponse
AskSimulationState ..> SimulationStateResponse
AskRecordedEvents ..> RecordedEventsResponse

ViewActor ..> ViewActorCommand
ControllerActor ..> ControllerActorCommand
SimulationManagerActor ..> SimulationManagerActorCommand
CelestialBodyActor ..> CelestialBodyActorCommand
EventRecorderActor ..> EventRecorderActorCommand

ViewActor --> ControllerActorCommand : use
ControllerActor --> ViewActorCommand : use
ControllerActor --> SimulationManagerActorCommand : use
SimulationManagerActor --> CelestialBodyActorCommand : use
CelestialBodyActor --> EventRecorderActorCommand : use

@enduml
